--- a/styles/SummaryStatistics.module.css
+++ b/styles/SummaryStatistics.module.css
@@ -7,6 +7,8 @@
   display: flex;
   gap: 0.5rem;
   padding: 1rem;
+  border: 4px solid gray;
+  border-radius: 0.5rem;
 }
 .divArticleSummaryStatisticsGroup {
   background-color: var(--gray-medium);
@@ -23,4 +25,10 @@
 .divArticlesSummaryStatisticsMetric {
   display: flex;
   justify-content: center;
+}
+.divArticleSummaryStatisticsGroupTransparent {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
 }
